fbasas: Initial commit of (non-working) React app bones

--- a/frontend/static_template.html
+++ b/frontend/static_template.html
@@ -77,55 +77,161 @@
 </div>
 <hr />
 
-<table>
+<table border="1" style="width: 100%;">
     <tbody>
         <tr>
-            <td>
+            <td style='width: 50%;'>
                 <div class="container">
                     <table class="lineup-table" cellpadding="10" border="1">
                         <thead>
                             <tr>
-                                <th colspan="2">Boston Red Sox Lineup</th>
+                                <th colspan="3">Boston Red Sox Lineup</th>
                             </tr>
                             <tr>
+                                <th>#</th>
                                 <th>Player</th>
+                                <th>Pos</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Player 1</td>
+                                <td>1</td>
+                                <td>Dustin Pedroia</td>
+                                <td>2B</td>
                             </tr>
                             <tr>
-                                <td>Player 2</td>
+                                <td>2</td>
+                                <td>Ted Williams</td>
+                                <td>RF</td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>David Ortiz</td>
+                                <td>DH</td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>Carl Yaztremski</td>
+                                <td>LF</td>
+                            </tr>
+                            <tr>
+                                <td>5</td>
+                                <td>Carlton Fisk</td>
+                                <td>C</td>
+                            </tr>
+                            <tr>
+                                <td>6</td>
+                                <td>Tris Speaker</td>
+                                <td>CF</td>
+                            </tr>
+                            <tr>
+                                <td>7</td>
+                                <td>Nomar Garciaparra</td>
+                                <td>SS</td>
+                            </tr>
+                            <tr>
+                                <td>8</td>
+                                <td>Wade Boggs</td>
+                                <td>3B</td>
+                            </tr>
+                            <tr>
+                                <td>9</td>
+                                <td>Jimmie Foxx</td>
+                                <td>1B</td>
+                            </tr>
+                            <tr>
+                                <td>P</td>
+                                <td>Pedro Martinez</td>
+                                <td>P</td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
             </td>
-            <td>
+            <td style='width: 50%;'>
                 <div class="container">
                     <table class="lineup-table" cellpadding="10" border="1">
                         <thead>
                             <tr>
-                                <th colspan="2">New York Yankees Lineup</th>
+                                <th colspan="3">New York Yankees Lineup</th>
                             </tr>
                             <tr>
+                                <th>#</th>
                                 <th>Player</th>
+                                <th>Pos</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Player 1</td>
+                                <td>1</td>
+                                <td>Don Mattingly</td>
+                                <td>1B</td>
                             </tr>
                             <tr>
-                                <td>Player 2</td>
+                                <td>2</td>
+                                <td>Mickey Mantle</td>
+                                <td>CF</td>
                             </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>Babe Ruth</td>
+                                <td>RF</td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>Lou Gehrig</td>
+                                <td>DH</td>
+                            </tr>
+                            <tr>
+                                <td>5</td>
+                                <td>Yogi Berra</td>
+                                <td>C</td>
+                            </tr>
+                            <tr>
+                                <td>6</td>
+                                <td>Derek Jeter</td>
+                                <td>SS</td>
+                            </tr>
+                            <tr>
+                                <td>7</td>
+                                <td>Alex Rodriguez</td>
+                                <td>3B</td>
+                            </tr>
+                            <tr>
+                                <td>8</td>
+                                <td>Joe Dimaggio</td>
+                                <td>LF</td>
+                            </tr>
+                            <tr>
+                                <td>9</td>
+                                <td>Robinson Cano</td>
+                                <td>2B</td>
+                            </tr>
+                            <tr>
+                                <td>P</td>
+                                <td>Whitey Ford</td>
+                                <td>P</td>
+                            </tr>
+
                         </tbody>
                     </table>
                 </div>
             </td>
         </tr>
     </tbody>
+</table>
+<hr/>
+<table align="center">
+    <tr><td><b>Inning:</b></td><td>Top 1</td></tr>
+    <tr><td><b>Outs:</b></td><td>0</td></tr>
+    <tr><td><b>At Bat:</b></td><td>Dustin Pedroia</td></tr>
+    <tr><td><b>Pitching:</b></td><td>Whitey Ford</td></tr>
+    <tr><td><b>1st:</b></td><td></td></tr>
+    <tr><td><b>2nd:</b></td><td></td></tr>
+    <tr><td><b>3rd:</b></td><td></td></tr>
+    <tr><td><b>Outcome:</b></td><td></td></tr>
+    <tr></tr>
+    <tr><td align="center" colspan="2"><button>Next Play</button></td></tr>
 </table>
 
 </body>
